--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -9,3 +9,12 @@
     display: none;
   }
 
+  #wall #tag-2 {
+    background: url(../images/tag-2.png) no-repeat;
+    z-index: 6;
+    display: block;
+  }
+
+  #wall #tag-2{
+    display: none;
+  }
